NXP-6387: Add Selenium tests for nuxeo-user-profile

--- a/nuxeo-distribution-dm/ftest/selenium/tests/suite2.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/suite2.html
@@ -187,6 +187,9 @@
     <tr>
       <td><a href="./testContentViewLocalConfiguration.html">testContentViewLocalConfiguration</a></td>
     </tr>
+    <tr>
+      <td><a href="./userCenter/userProfile.html">userProfile</a></td>
+    </tr>
   </tbody>
 </table>
 </body>
