NXP-7085 - improved assemblies; better use of dependency tree and dependencyManagement; use of nuxeo-distribution-tools 1.10.1

--- a/nuxeo-distribution-resources/src/main/resources/doc-dm/readme.html
+++ b/nuxeo-distribution-resources/src/main/resources/doc-dm/readme.html
@@ -124,7 +124,7 @@ Save time: you can save and reuse your most frequent queries.</li>
     German: Georges Racinet<br>
     Greek: Nina Bagouli<br>
     Italian: Mirto Silvio Busico, Samuele Innocenti, Stefane Fermigier<br>
-    Japanese: Damien Dupraz<br>
+    Japanese: Damien Dupraz, Hiromi Kimura<br>
     Polish: Adam Lozy<br>
     Portuguese: Jose Luis de la Rosa<br>
     Brazilian: Rogerio J. Gentil<br>
