NXP-7151 - fix save button

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/setup.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/setup.xhtml
@@ -300,7 +300,7 @@
           <div class="actionBar">
             <a4j:commandButton value="#{messages['action.setup.save']}"
                 action="#{setupWizardAction.save()}" reRender="setupPanel"
-                styleClass="button" onclick="jQuery('html, body').animate({scrollTop:0}, 'slow');return true" />
+                styleClass="button" onclick="jQuery('html, body').animate({scrollTop:0}, 'slow')" />
             <a4j:commandButton value="#{messages['action.setup.cancel']}"
                 action="#{setupWizardAction.resetParameters()}"
                 reRender="setupPanel" styleClass="button" />
@@ -323,7 +323,7 @@
             <div class="actionBar">
               <a4j:commandButton value="#{messages['action.setup.save']}"
                   action="#{setupWizardAction.save()}" reRender="setupPanel"
-                  styleClass="button" onclick="jQuery('html, body').animate({scrollTop:0}, 'slow');return true" />
+                  styleClass="button" onclick="jQuery('html, body').animate({scrollTop:0}, 'slow')" />
               <a4j:commandButton value="#{messages['action.setup.cancel']}"
                   action="#{setupWizardAction.resetParameters()}"
                   reRender="setupPanel" styleClass="button"  />
