NXP-7162: Show only userprofile form in edit mode when editing the user is prohibited

--- a/nuxeo-user-profile/src/main/resources/web/nuxeo.war/incl/profile/user_profile.xhtml
+++ b/nuxeo-user-profile/src/main/resources/web/nuxeo.war/incl/profile/user_profile.xhtml
@@ -17,7 +17,7 @@
                   value="#{messages['label.userManager.editUser']}"
                   action="#{userProfileActions.setMode('edit')}"
                   styleClass="button" id="editUserButton"
-                  rendered="#{userProfileActions.mode == 'view' and userManagementActions.allowEditUser and notReadOnly}"
+                  rendered="#{userProfileActions.mode == 'view'}"
                   reRender="profilePanel" />
                 <a4j:commandButton
                   value="#{messages['command.cancel']}"
@@ -32,7 +32,7 @@
                     value="#{messages['command.change.password']}"
                     action="#{userProfileActions.setMode('editPassword')}"
                     styleClass="button" id="editUserPasswordButton"
-                    rendered="#{userProfileActions.mode == 'view' and userManagementActions.allowEditUser and notReadOnly}"
+                    rendered="#{userProfileActions.mode == 'view' and userProfileActions.canEdit}"
                     reRender="profilePanel" />
               </td>
             </tr>
@@ -41,14 +41,14 @@
       </a4j:form>
 
       <h:form id="viewUser" rendered="#{userProfileActions.mode == 'view'}">
-        <nxl:layout name="user" mode="#{userProfileActions.mode}" value="#{userManagementActions.selectedUser}" />
-        <nxl:layout name="userprofile" mode="#{userProfileActions.mode}" value="#{userProfileActions.userWorkspace}" />
+        <nxl:layout name="user" mode="view" value="#{userManagementActions.selectedUser}" />
+        <nxl:layout name="userprofile" mode="view" value="#{userProfileActions.userWorkspace}" />
       </h:form>
 
       <h:form id="editUser" enctype="multipart/form-data"
-        rendered="#{userProfileActions.mode == 'edit' and userManagementActions.allowEditUser and notReadOnly}">
-        <nxl:layout name="user" mode="#{userProfileActions.mode}" value="#{userManagementActions.selectedUser}" />
-        <nxl:layout name="userprofile" mode="#{userProfileActions.mode}" value="#{userProfileActions.userWorkspace}" />
+        rendered="#{userProfileActions.mode == 'edit'}">
+        <nxl:layout name="user" mode="#{userProfileActions.canEdit ? 'edit' : 'view'}" value="#{userManagementActions.selectedUser}" />
+        <nxl:layout name="userprofile" mode="edit" value="#{userProfileActions.userWorkspace}" />
         <table class="dataInput">
           <tbody>
             <tr>
@@ -65,8 +65,8 @@
         </table>
       </h:form>
 
-      <h:form id="editUserPassword" rendered="#{userProfileActions.mode == 'editPassword' and userManagementActions.allowEditUser and notReadOnly}">
-        <nxl:layout name="user" mode="#{userProfileActions.mode}" value="#{userManagementActions.selectedUser}" />
+      <h:form id="editUserPassword" rendered="#{userProfileActions.mode == 'editPassword'}">
+        <nxl:layout name="user" mode="#{userProfileActions.canEdit ? 'editPassword' : 'hidden'}" value="#{userManagementActions.selectedUser}" />
         <table class="dataInput">
           <tbody>
             <tr>
@@ -75,7 +75,8 @@
                 <h:commandButton id="saveUserPasswordButton"
                   value="#{messages['command.save']}"
                   action="#{userManagementActions.changePassword}"
-                  styleClass="button" />
+                  styleClass="button"
+                  rendered="#{userProfileActions.canEdit}" />
               </td>
               <td class="fieldColumn"></td>
             </tr>
