NXP-7123: Fix templates displaying actions without icon

--- a/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/user_center_view_selector.xhtml
+++ b/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/user_center_view_selector.xhtml
@@ -16,7 +16,8 @@
 
       <h:commandLink action="#{userCenterViews.setCurrentViewId(userCenterTab.id)}" immediate="true">
         <nxu:graphicImage value="#{userCenterTab.icon}"
-              alt="#{messages[userCenterTab.label]}" />
+          rendered="#{not empty userCenterTab.icon}"
+          alt="#{messages[userCenterTab.label]}" />
         <h:outputText value="#{messages[userCenterTab.label]}" />
       </h:commandLink>
 
