NXP-7123: Fix templates displaying actions without icon

--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/incl/actions_fragment.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/incl/actions_fragment.xhtml
@@ -32,7 +32,8 @@
               var="action"
               value="#{actions}">
               <a href="#{action.getLink()}">
-                <h:graphicImage value="#{action.icon}" />
+                <h:graphicImage value="#{action.icon}"
+                  rendered="#{not empty action.icon}" />
                 <h:outputText value="#{messages[action.label]}" />
               </a>
             </nxu:dataList>
