--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/add_step_widget_template.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/add_step_widget_template.xhtml
@@ -11,7 +11,8 @@
         <div class="action_bar">
           <nxu:dataList styleClass="ctxMenuStyle" layout="unorderedList" var="action" value="#{actions}" id ="addStepInForkActionList" rowIndexVar="rowIndex" rowCountVar="rowCount">
           <a4j:commandLink onclick="document.getElementById('selectRouteElementsTypeForCreationForm:hiddenSourceDocId').value = '#{field_1}';#{action.getLink()}" reRender="selectRouteElementsTypeForCreationRegion" >
-              <nxu:graphicImage value="#{action.icon}"/>
+              <nxu:graphicImage value="#{action.icon}"
+                rendered="#{not empty action.icon}" />
             </a4j:commandLink>
             <a4j:commandLink  id="step_#{rowCount%1}" onclick="document.getElementById('selectRouteElementsTypeForCreationForm:hiddenSourceDocId').value = '#{field_1}';#{action.getLink()}"  value="#{messages[action.label]}"
               reRender="selectRouteElementsTypeForCreationRegion" >
@@ -29,12 +30,13 @@
           <nxu:dataList styleClass="ctxMenuStyle" layout="unorderedList" var="action" value="#{actions}" id ="addStepInForActionList" rowIndexVar="rowIndex">
             <a4j:commandLink onclick="document.getElementById('selectRouteElementsTypeForCreationForm:hiddenSourceDocId').value = '#{field_1}';#{action.getLink()}"
                reRender="selectRouteElementsTypeForCreationRegion">
-              <h:graphicImage value="#{action.icon}"/>
-               <f:param name="stepId" value="#{field_1}" />
+              <h:graphicImage value="#{action.icon}"
+                rendered="#{not empty action.icon}" />
+              <f:param name="stepId" value="#{field_1}" />
             </a4j:commandLink>
             <a4j:commandLink  id="step_#{rowCount%2}" onclick="document.getElementById('selectRouteElementsTypeForCreationForm:hiddenSourceDocId').value = '#{field_1}';#{action.getLink()}"  value="#{messages[action.label]}"
                reRender="selectRouteElementsTypeForCreationRegion">
-               <f:param name="stepId" value="#{field_1}" />
+              <f:param name="stepId" value="#{field_1}" />
             </a4j:commandLink>
           </nxu:dataList>
         </div>
