NXP-7123: Fix templates displaying actions without icon

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/document_actions.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/document_actions.xhtml
@@ -22,7 +22,8 @@
             <nxh:commandLink action="#{action.getLink()}"
               id="documentActionSubviewUpperListLink"
               immediate="#{action.immediate}">
-              <h:graphicImage value="#{action.icon}" />
+              <h:graphicImage value="#{action.icon}"
+                rendered="#{not empty action.icon}" />
               <h:outputText value="#{messages[action.label]}" />
             </nxh:commandLink>
           </nxu:dataList>
@@ -38,7 +39,8 @@
             var="action"
             value="#{actions}">
             <a href="#{action.getLink()}">
-              <h:graphicImage value="#{action.icon}" />
+              <h:graphicImage value="#{action.icon}"
+                rendered="#{not empty action.icon}" />
               <h:outputText value="#{messages[action.label]}" />
             </a>
           </nxu:dataList>
