--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/liveedit_create_actions.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/liveedit_create_actions.xhtml
@@ -14,7 +14,10 @@
                       value="#{actions}">
           <!-- This does not work as it works for the nxh:commandLink JSF tags (nested JSF EL evaluations) -->
           <nxh:outputLink value="#{action.getLink()}">
-            <h:graphicImage value="#{action.icon}" title="#{messages[action.label]}" alt="#{messages[action.label]}"/>
+            <h:graphicImage value="#{action.icon}"
+              rendered="#{not empty action.icon}"
+              title="#{messages[action.label]}"
+              alt="#{messages[action.label]}"/>
           </nxh:outputLink>
         </nxu:dataList>
       </nxu:methodResult>
