--- a/ftest/selenium/tests/testHtmltextWidget.html
+++ b/ftest/selenium/tests/testHtmltextWidget.html
@@ -52,19 +52,24 @@
 	<td>Value is required</td>
 </tr>
 <tr>
-	<td>selectFrame</td>
-	<td>mce_editor_0</td>
+	<td>click</td>
+	<td>//a[@id='htmltextWidgetLayout_edit_form:nxl_htmltextWidgetLayout:nxw_htmltextWidget_bold']/span[1]</td>
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>//body[@class=&quot;mceContentBody&quot;]</td>
-	<td>&lt;b&gt;Bold&lt;/b&gt; content</td>
+	<td>typeKeys</td>
+	<td>tinymce</td>
+	<td>Bold</td>
 </tr>
 <tr>
-	<td>selectWindow</td>
-	<td>null</td>
+	<td>click</td>
+	<td>//a[@id='htmltextWidgetLayout_edit_form:nxl_htmltextWidgetLayout:nxw_htmltextWidget_bold']/span[1]</td>
 	<td></td>
+</tr>
+<tr>
+	<td>typeKeys</td>
+	<td>tinymce</td>
+	<td> content</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
