NXP-7175: follow group widget changes

--- a/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupMembers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createSubGroupMembers.html
@@ -176,33 +176,33 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_group_name']</td>
 	<td>sub-members</td>
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_group_members_suggest']</td>
 	<td>gab</td>
 </tr>
 <tr>
 	<td>waitForCondition</td>
-	<td>selenium.browserbot.getCurrentWindow().document.getElementById('createGroupView:createGroup:nxl_group:nxw_members_suggestionBox').style.display != 'none'</td>
+	<td>selenium.browserbot.getCurrentWindow().document.getElementById('createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox').style.display != 'none'</td>
 	<td>10000</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>Gabrielle Solis</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <!-- wait for table to appear -->
 <tr>
 	<td>waitForCondition</td>
-	<td>selenium.browserbot.getCurrentWindow().document.getElementById('createGroupView:createGroup:nxl_group:nxw_members_list:0:nxw_members_listItem') != null</td>
+	<td>selenium.browserbot.getCurrentWindow().document.getElementById('createGroupView:createGroup:nxl_group:nxw_group_members_list:0:nxw_group_members_listItem') != null</td>
 	<td>10000</td>
 </tr>
 <tr>
@@ -364,28 +364,28 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='viewGroupView:editGroup:nxl_group_2:nxw_subgroups_2_suggest']</td>
+	<td>//input[@name='viewGroupView:editGroup:nxl_group_2:nxw_group_subgroups_2_suggest']</td>
 	<td>sub-m</td>
 </tr>
 <tr>
 	<td>waitForCondition</td>
-	<td>selenium.browserbot.getCurrentWindow().document.getElementById('viewGroupView:editGroup:nxl_group_2:nxw_subgroups_2_suggestionBox').style.display != 'none'</td>
+	<td>selenium.browserbot.getCurrentWindow().document.getElementById('viewGroupView:editGroup:nxl_group_2:nxw_group_subgroups_2_suggestionBox').style.display != 'none'</td>
 	<td>10000</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_subgroups_2_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_group_subgroups_2_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>sub-members</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_subgroups_2_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_group_subgroups_2_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <!-- wait for table to appear -->
 <tr>
 	<td>waitForCondition</td>
-	<td>selenium.browserbot.getCurrentWindow().document.getElementById('viewGroupView:editGroup:nxl_group_2:nxw_subgroups_2_list:0:nxw_subgroups_2_listItem') != null</td>
+	<td>selenium.browserbot.getCurrentWindow().document.getElementById('viewGroupView:editGroup:nxl_group_2:nxw_group_subgroups_2_list:0:nxw_group_subgroups_2_listItem') != null</td>
 	<td>10000</td>
 </tr>
 <tr>
