--- a/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/createGroup.html
@@ -90,7 +90,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_group_name']</td>
 	<td>Johns</td>
 </tr>
 <tr>
@@ -100,7 +100,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_group_members_suggest']</td>
 	<td>bre</td>
 </tr>
 <tr>
@@ -110,7 +110,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>Bree Van de Kaamp</td>
 </tr>
 <tr>
@@ -120,7 +120,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -135,7 +135,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_group_members_suggest']</td>
 	<td>jdo</td>
 </tr>
 <tr>
@@ -145,7 +145,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Doe</td>
 </tr>
 <tr>
@@ -155,7 +155,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -170,7 +170,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_group_members_suggest']</td>
 	<td>jsmith</td>
 </tr>
 <tr>
@@ -180,7 +180,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Smith</td>
 </tr>
 <tr>
@@ -190,7 +190,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -200,17 +200,17 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:0:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_list:0:nxw_group_members_listItem']</td>
 	<td>Bree Van de Kaamp</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:1:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_list:1:nxw_group_members_listItem']</td>
 	<td>John Doe</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:2:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_list:2:nxw_group_members_listItem']</td>
 	<td>John Smith</td>
 </tr>
 <tr>
@@ -332,7 +332,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_group_name']</td>
 	<td>Johns</td>
 </tr>
 <tr>
@@ -358,12 +358,12 @@
 <!--creation d'un groupe pour suppression-->
 <tr>
 	<td>type</td>
-	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_groupname']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_group_name']</td>
 	<td>Suppr</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_grouplabel']</td>
+	<td>//input[@id='createGroupView:createGroup:nxl_group:nxw_group_label']</td>
 	<td>Suppress</td>
 </tr>
 <tr>
@@ -373,7 +373,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_group_members_suggest']</td>
 	<td>jdo</td>
 </tr>
 <tr>
@@ -383,7 +383,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Doe</td>
 </tr>
 <tr>
@@ -393,7 +393,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -408,7 +408,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_group_members_suggest']</td>
 	<td>jsmith</td>
 </tr>
 <tr>
@@ -418,7 +418,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>John Smith</td>
 </tr>
 <tr>
@@ -428,7 +428,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -443,7 +443,7 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_members_suggest']</td>
+	<td>//input[@name='createGroupView:createGroup:nxl_group:nxw_group_members_suggest']</td>
 	<td>lucien</td>
 </tr>
 <tr>
@@ -453,7 +453,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td>Lucien Bramard</td>
 </tr>
 <tr>
@@ -463,7 +463,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_suggestionBox:suggest']/x:tbody/x:tr[1]/x:td[2]</td>
 	<td></td>
 </tr>
 <tr>
@@ -473,17 +473,17 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:0:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_list:0:nxw_group_members_listItem']</td>
 	<td>John Doe</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:1:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_list:1:nxw_group_members_listItem']</td>
 	<td>John Smith</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_members_list:2:nxw_members_listItem']</td>
+	<td>//*[@id='createGroupView:createGroup:nxl_group:nxw_group_members_list:2:nxw_group_members_listItem']</td>
 	<td>Lucien Bramard</td>
 </tr>
 <tr>
