--- a/nuxeo-distribution-dm/ftest/selenium/tests/modifyGroup.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/modifyGroup.html
@@ -126,29 +126,29 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_members_2_list:0:nxw_members_2_listItem']</td>
+	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_group_members_2_list:0:nxw_group_members_2_listItem']</td>
 	<td>Bree Van de Kaamp</td>
 </tr>
 
 <tr>
 	<td>click</td>
-	<td>viewGroupView:editGroup:nxl_group_2:nxw_members_2_list:0:nxw_members_2_delete</td>
+	<td>viewGroupView:editGroup:nxl_group_2:nxw_group_members_2_list:0:nxw_group_members_2_delete</td>
 	<td></td>
 </tr>
 <!-- wait for table item to disappear -->
 <tr>
 	<td>waitForCondition</td>
-	<td>selenium.browserbot.getCurrentWindow().document.getElementById('viewGroupView:editGroup:nxl_group_2:nxw_members_2_list:2:nxw_members_2_listItem') == null</td>
+	<td>selenium.browserbot.getCurrentWindow().document.getElementById('viewGroupView:editGroup:nxl_group_2:nxw_group_members_2_list:2:nxw_group_members_2_listItem') == null</td>
 	<td>10000</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_members_2_list:0:nxw_members_2_listItem']</td>
+	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_group_members_2_list:0:nxw_group_members_2_listItem']</td>
 	<td>John Doe</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_members_2_list:1:nxw_members_2_listItem']</td>
+	<td>//*[@id='viewGroupView:editGroup:nxl_group_2:nxw_group_members_2_list:1:nxw_group_members_2_listItem']</td>
 	<td>John Smith</td>
 </tr>
 <tr>
