--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
@@ -17,7 +17,9 @@
        <nxu:dataList var="mainTab" value="#{webActions.getActionsList('MAIN_TABS')}">
          <li class="#{nxu:test(webActions.getCurrentTabId('MAIN_TABS') == mainTab.id, 'selected', '')}">
              <nxd:restDocumentLink document="#{mainTabsActions.getDocumentFor(mainTab.id)}"
-               view="#{mainTabsActions.getViewFor(mainTab)}" addTabInfo="false"
+               view="#{mainTabsActions.getViewFor(mainTab)}"
+               pattern="#{mainTabsActions.getPatternFor(mainTab)}"
+               addTabInfo="false"
                tabs="MAIN_TABS:#{mainTab.id}">
                <h:outputText value="#{messages[mainTab.label]}" />
              </nxd:restDocumentLink>
