NXP-7309: Gets proper profile informations

--- a/nuxeo-user-profile/src/main/resources/web/nuxeo.war/widgets/summary/user_profile_widget_template.xhtml
+++ b/nuxeo-user-profile/src/main/resources/web/nuxeo.war/widgets/summary/user_profile_widget_template.xhtml
@@ -8,7 +8,7 @@
       <h:outputText value="#{messages['user.center.profile']}" />
     </h3>
     <nxl:layout name="user" mode="view" value="#{userManagementActions.selectedUser}" />
-    <nxl:layout name="userprofile" mode="view" value="#{userManagementActions.selectedUser}" />
+    <nxl:layout name="userprofile" mode="view" value="#{userProfileActions.selectedUserProfileDocument}" />
   </c:if>
 
 </div>
