--- a/ftest/selenium/tests/testErrorPage.html
+++ b/ftest/selenium/tests/testErrorPage.html
@@ -12,619 +12,619 @@
 <tr><td rowspan="1" colspan="3">testErrorPage</td></tr>
 </thead><tbody>
 <tr>
-	<td>setTimeout</td>
-	<td>120000</td>
-	<td></td>
+  <td>setTimeout</td>
+  <td>120000</td>
+  <td></td>
 </tr>
 <tr>
-	<td>open</td>
-	<td>/nuxeo/logout</td>
-	<td></td>
+  <td>open</td>
+  <td>/nuxeo/logout</td>
+  <td></td>
 </tr>
 <tr>
-	<td>open</td>
-	<td>/nuxeo/</td>
-	<td></td>
+  <td>open</td>
+  <td>/nuxeo/</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Error invalid html</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Error invalid html</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>An error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>An error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>an unexpected error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>an unexpected error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Error ui:include not found</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Error ui:include not found</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>Page Not Found</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>Page Not Found</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextNotPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextNotPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextNotPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextNotPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=JSF checked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=JSF checked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>An error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>An error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>an unexpected error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>an unexpected error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=JSF unchecked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=JSF unchecked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>An error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>An error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>an unexpected error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>an unexpected error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam getter checked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam getter checked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>An error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>An error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>an unexpected error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>an unexpected error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam getter unchecked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam getter unchecked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>An error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>An error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>an unexpected error occurred</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>an unexpected error occurred</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam getter security error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam getter security error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>You don't have the neccessary permission to do the requested action</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>You don't have the necessary permission to do the requested action</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>You don't have sufficient rights to perform this operation</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>You don't have sufficient rights to perform this operation</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam factory checked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam factory checked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam factory unchecked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam factory unchecked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam factory security error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam factory security error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>You don't have the neccessary permission to do the requested action</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>You don't have the neccessary permission to do the requested action</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>You don't have sufficient rights to perform this operation</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>You don't have sufficient rights to perform this operation</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam action checked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam action checked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam action unchecked error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam action unchecked error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=back</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
-	<td>60000</td>
+  <td>waitForOpensocialGadgetsToLoad</td>
+  <td>content</td>
+  <td>60000</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Go to error page</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Go to error page</td>
+  <td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Seam action security error</td>
-	<td></td>
+  <td>clickAndWait</td>
+  <td>link=Seam action security error</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>You don't have the neccessary permission to do the requested action</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>You don't have the neccessary permission to do the requested action</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>You don't have sufficient rights to perform this operation</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>You don't have sufficient rights to perform this operation</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=back</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=back</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=change username</td>
-	<td></td>
+  <td>verifyElementPresent</td>
+  <td>link=change username</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show stacktrace</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show stacktrace</td>
+  <td></td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>show context dump</td>
-	<td></td>
+  <td>verifyTextPresent</td>
+  <td>show context dump</td>
+  <td></td>
 </tr>
 
 </tbody></table>
