--- a/ftest/selenium/tests/testErrorPage.html
+++ b/ftest/selenium/tests/testErrorPage.html
@@ -478,7 +478,7 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>You don't have the neccessary permission to do the requested action</td>
+  <td>You don't have the necessary permission to do the requested action</td>
   <td></td>
 </tr>
 <tr>
@@ -598,7 +598,7 @@
 </tr>
 <tr>
   <td>verifyTextPresent</td>
-  <td>You don't have the neccessary permission to do the requested action</td>
+  <td>You don't have the necessary permission to do the requested action</td>
   <td></td>
 </tr>
 <tr>
