NXP-7336: Add user name as tooltip in contributors and user suggestion widgets

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_suggestion_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/user_suggestion_widget_template.xhtml
@@ -39,7 +39,7 @@
                 <c:set var="userDisplayName" value="#{nxu:userDisplayName(info.id, info.entry[userSchema][firstLabelField], info.entry[userSchema][entrySecondLabel])}" />
               </c:when>
             </c:choose>
-            <h:commandLink value="#{userDisplayName}" action="#{userManagementActions.viewUser(info.id)}"/>
+            <h:commandLink value="#{userDisplayName}" action="#{userManagementActions.viewUser(info.id)}" title="#{info.id}" />
           </f:subview>
           <f:subview rendered="#{info.type == 'GROUP_TYPE'}">
             <h:graphicImage value="/icons/group.gif" alt="group.gif" />
